[tool.poetry]
name = "desktop programming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "0.32.1"
SQLAlchemy="2.0.36"
fastapi="0.115.6"
psycopg2 = "2.9.9"
python-decouple= "3.8"
bcrypt="4.2.1"
python-jose="3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
